Fix map spacing so attribution does not fall off of the page, add navigationpadding classes that can be added to push down the map on the page

--- a/js/angular/app/styles/partials/_indicators.scss
+++ b/js/angular/app/styles/partials/_indicators.scss
@@ -3,24 +3,8 @@
   top: 5.5rem;
 }
 
-.navigationsecondary {
-  background-color: #eee;
-  padding: .8rem;
-  // When the affix happens, needed to keep the bar full width
-  width: 100%;
-  position: fixed;
-
-  .btn-group {
-    display: inline;
-  }
-}
-
 .indicators .leaflet-control-zoom {
   display: none;
-}
-
-.indicators-map-pushdown {
-    margin-top: 5rem;
 }
 
 .navigationsecondary-menu {
